--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -73,19 +73,21 @@ VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dconverter
 
-bin_PROGRAMS = asc_demount asc_mount asc_gfx2pcx asc_makegfx asc_mntgraph
+bin_PROGRAMS = asc_demount asc_mount asc_gfx2pcx asc_makegfx asc_mntgraph asc_viewid
 
 asc_demount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp
 asc_mount_SOURCES = mount.cpp   basestrm.cpp misc.cpp ascstring.cpp
 asc_gfx2pcx_SOURCES = bi2pcx.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
 asc_makegfx_SOURCES = makegfx.cpp   basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
 asc_mntgraph_SOURCES = mntgraph.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
+asc_viewid_SOURCES = viewid.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
 
 asc_mount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 asc_demount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 asc_gfx2pcx_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
 asc_makegfx_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
 asc_mntgraph_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
+asc_viewid_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
 CONFIG_CLEAN_FILES = 
@@ -120,6 +122,12 @@ gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o
 asc_mntgraph_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_mntgraph_LDFLAGS = 
+asc_viewid_OBJECTS =  viewid.o basestrm.o misc.o ascstring.o loadpcxc.o \
+palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
+CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
+typen.o vehicletype.o password.o
+asc_viewid_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_viewid_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
@@ -136,9 +144,9 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/gameoptions.P .deps/graphicset.P .deps/loadpcxc.P .deps/makegfx.P \
 .deps/misc.P .deps/mntgraph.P .deps/mount.P .deps/newfont.P \
 .deps/palette.P .deps/password.P .deps/sgstream.P .deps/stack.P \
-.deps/typen.P .deps/vehicletype.P
-SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES)
-OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS)
+.deps/typen.P .deps/vehicletype.P .deps/viewid.P
+SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES) $(asc_viewid_SOURCES)
+OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS) $(asc_viewid_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -211,6 +219,10 @@ asc_makegfx: $(asc_makegfx_OBJECTS) $(asc_makegfx_DEPENDENCIES)
 asc_mntgraph: $(asc_mntgraph_OBJECTS) $(asc_mntgraph_DEPENDENCIES)
 	@rm -f asc_mntgraph
 	$(CXXLINK) $(asc_mntgraph_LDFLAGS) $(asc_mntgraph_OBJECTS) $(asc_mntgraph_LDADD) $(LIBS)
+
+asc_viewid: $(asc_viewid_OBJECTS) $(asc_viewid_DEPENDENCIES)
+	@rm -f asc_viewid
+	$(CXXLINK) $(asc_viewid_LDFLAGS) $(asc_viewid_OBJECTS) $(asc_viewid_LDADD) $(LIBS)
 .cpp.o:
 	$(CXXCOMPILE) -c $<
 
