The data file is mounted using automake  Added sgml documentation  Added command line parsing functionality;    integrated it into autoconf/automake  Replaced command line parsing of ASC and ASCmapedit

--- a/Makefile.in
+++ b/Makefile.in
@@ -61,8 +61,11 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 CC = @CC@
 CXX = @CXX@
+DOCBOOK2MAN = @DOCBOOK2MAN@
+GENCL = @GENCL@
 LDADDLIBBZ2 = @LDADDLIBBZ2@
 LIBBZ2 = @LIBBZ2@
+MAINCONDATA = @MAINCONDATA@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
@@ -71,7 +74,7 @@ SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
 VERSION = @VERSION@
 
-SUBDIRS = source 
+SUBDIRS = source data doc
 
 EXTRA_DIST = asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm 
 
