--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -59,8 +59,11 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 CC = @CC@
 CXX = @CXX@
+DOCBOOK2MAN = @DOCBOOK2MAN@
+GENCL = @GENCL@
 LDADDLIBBZ2 = @LDADDLIBBZ2@
 LIBBZ2 = @LIBBZ2@
+MAINCONDATA = @MAINCONDATA@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
@@ -69,7 +72,7 @@ SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
 VERSION = @VERSION@
 
-SUBDIRS = docs sdl libs unix tools ai
+SUBDIRS = @GENCL@ docs sdl libs unix tools ai
 EXTRA_DIST = *.cpp *.h *.inc
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
