--- a/source/ai/Makefile.in
+++ b/source/ai/Makefile.in
@@ -59,8 +59,11 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 CC = @CC@
 CXX = @CXX@
+DOCBOOK2MAN = @DOCBOOK2MAN@
+GENCL = @GENCL@
 LDADDLIBBZ2 = @LDADDLIBBZ2@
 LIBBZ2 = @LIBBZ2@
+MAINCONDATA = @MAINCONDATA@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
