--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -1,8 +1,8 @@
 MAINTAINERCLEANFILES    = Makefile.in
 
-## man_MANS		= asc.6 asc_demount.6 asc_mount.6 asc_mapedit.6
+man_MANS		= asc.6 asc_demount.6 asc_mount.6 asc_mapedit.6
 ## asc_gfx2pcx.6 asc_makegfx.6 asc_mntgraph.6 asc_viewid.6 ascmap2pcx.6
 
-## %.6: %.sgml
-##	@DOCBOOK2MAN@ $< > $@
+%.6: %.sgml
+	@DOCBOOK2MAN@ $< > $@
 
