--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -70,6 +70,7 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 
 SUBDIRS = @GENCL@ docs sdl libs unix tools ai
