--- a/configure.in
+++ b/configure.in
@@ -11,11 +11,12 @@ CFLAGS="$CFLAGS -D_UNIX_ -D_SDL_ -D_NOASM_"
 AC_PROG_CXX
 CXXFLAGS="$CXXFLAGS -DHEXAGON -funsigned-char -D_UNIX_ -D_SDL_ -D_NOASM_"
 AC_PROG_RANLIB
-AC_CHECK_PROG(DOCBOOK2MAN, docbook-to-man docbook2man )
-dnl AC_CHECK_PROG(DOCBOOK2MAN, docbook-to-man, docbook-to-man)
-dnl if test "X$DOCBOOK2MAN" = X; then
-dnl	AC_CHECK_PROG(DOCBOOK2MAN, docbook2man, docbook2man)
-dnl fi
+
+AC_ARG_ENABLE( sgml2man, [  --enable-sgml2man will build the man pages from the sgml source files.], SGML2MAN=manpages )
+AC_SUBST([SGML2MAN])
+if test "X$SGML2MAN" = "Xmanpages"; then
+   AC_CHECK_PROG(DOCBOOK2MAN, docbook-to-man docbook2man )
+fi
 
 AC_CHECK_PROG(GENCL,genparse,clparser)
 
@@ -47,7 +48,6 @@ AC_TYPE_SIZE_T
 
 dnl Checks for libraries.
 AC_CHECK_LIB( pthread, pthread_create, [ ] )
-dnl AC_CHECK_LIB( SDL-1.1, SDL_EnableKeyRepeat, echo " ", AC_MSG_ERROR( ASC requires SDL 1.1.3 or newer to be installed ) )
 AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,, AC_MSG_ERROR( ASC requires the SDL_image library. You can get it at www.libsdl.org ) )
 
 dnl libbz2 stuff (should have a versionnr about 1.0.0)
@@ -77,6 +77,9 @@ if test "x$lib_bz2_static" = "xyes"; then
 else 
   LDADDLIBBZ2=-lbz2
 fi
+
+
+
 
 SDL_VERSION=1.1.3
       AM_PATH_SDL($SDL_VERSION,
