--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -70,9 +70,10 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 
-SUBDIRS = manpages
+SUBDIRS = @SGML2MAN@
 EXTRA_DIST = *.html *.css
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
