--- a/source/clparser/Makefile.am
+++ b/source/clparser/Makefile.am
@@ -1,4 +1,5 @@
-BUILT_SOURCES = asc.cpp mapedit.cpp
+BUILT_SOURCES = asc.cpp mapedit.cpp map2pcx.cpp mount.cpp demount.cpp viewid.cpp \
+                makegfx.cpp gfx2pcx.cpp
 
 %.cpp %.h: %.gp
 	genparse $< -l cpp -c cpp -o $*
