--- a/source/docs/en/Makefile.in
+++ b/source/docs/en/Makefile.in
@@ -72,6 +72,7 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 
 EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html 
