--- a/source/tools/Makefile.in
+++ b/source/tools/Makefile.in
@@ -72,6 +72,7 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 SUBDIRS = linux
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
