--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -72,18 +72,19 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dconverter
 
 bin_PROGRAMS = asc_demount asc_mount asc_gfx2pcx asc_makegfx asc_mntgraph asc_viewid
 
-asc_demount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp
-asc_mount_SOURCES = mount.cpp   basestrm.cpp misc.cpp ascstring.cpp
-asc_gfx2pcx_SOURCES = bi2pcx.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
-asc_makegfx_SOURCES = makegfx.cpp   basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
-asc_mntgraph_SOURCES = mntgraph.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
-asc_viewid_SOURCES = viewid.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
+asc_demount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
+asc_mount_SOURCES = mount.cpp   basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
+asc_gfx2pcx_SOURCES = bi2pcx.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp
+asc_makegfx_SOURCES = makegfx.cpp   basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp
+asc_mntgraph_SOURCES = mntgraph.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp
+asc_viewid_SOURCES = viewid.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp
 
 asc_mount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 asc_demount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
@@ -101,34 +102,35 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I../../..
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
-asc_demount_OBJECTS =  demount.o basestrm.o misc.o ascstring.o
+asc_demount_OBJECTS =  demount.o basestrm.o misc.o ascstring.o \
+strtmesg.o
 asc_demount_DEPENDENCIES = 
 asc_demount_LDFLAGS = 
-asc_mount_OBJECTS =  mount.o basestrm.o misc.o ascstring.o
+asc_mount_OBJECTS =  mount.o basestrm.o misc.o ascstring.o strtmesg.o
 asc_mount_DEPENDENCIES = 
 asc_mount_LDFLAGS = 
 asc_gfx2pcx_OBJECTS =  bi2pcx.o basestrm.o misc.o ascstring.o loadpcxc.o \
 palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
 CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
-typen.o vehicletype.o password.o
+typen.o vehicletype.o password.o strtmesg.o
 asc_gfx2pcx_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_gfx2pcx_LDFLAGS = 
 asc_makegfx_OBJECTS =  makegfx.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
-buildingtype.o typen.o vehicletype.o password.o
+buildingtype.o typen.o vehicletype.o password.o strtmesg.o
 asc_makegfx_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_makegfx_LDFLAGS = 
 asc_mntgraph_OBJECTS =  mntgraph.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
-buildingtype.o typen.o vehicletype.o password.o
+buildingtype.o typen.o vehicletype.o password.o strtmesg.o
 asc_mntgraph_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_mntgraph_LDFLAGS = 
 asc_viewid_OBJECTS =  viewid.o basestrm.o misc.o ascstring.o loadpcxc.o \
 palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
 CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
-typen.o vehicletype.o password.o
+typen.o vehicletype.o password.o strtmesg.o
 asc_viewid_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_viewid_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -147,7 +149,7 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/gameoptions.P .deps/graphicset.P .deps/loadpcxc.P .deps/makegfx.P \
 .deps/misc.P .deps/mntgraph.P .deps/mount.P .deps/newfont.P \
 .deps/palette.P .deps/password.P .deps/sgstream.P .deps/stack.P \
-.deps/typen.P .deps/vehicletype.P .deps/viewid.P
+.deps/strtmesg.P .deps/typen.P .deps/vehicletype.P .deps/viewid.P
 SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES) $(asc_viewid_SOURCES)
 OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS) $(asc_viewid_OBJECTS)
 
