--- a/configure.in
+++ b/configure.in
@@ -12,13 +12,20 @@ AC_PROG_CXX
 CXXFLAGS="$CXXFLAGS -DHEXAGON -funsigned-char -D_UNIX_ -D_SDL_ -D_NOASM_"
 AC_PROG_RANLIB
 
-AC_ARG_ENABLE( sgml2man, [  --enable-sgml2man will build the man pages from the sgml source files.], SGML2MAN=manpages )
+AC_ARG_ENABLE( sgml2man, [  --enable-sgml2man       will build the man pages from the sgml source files.], SGML2MAN=manpages )
 AC_SUBST([SGML2MAN])
 if test "X$SGML2MAN" = "Xmanpages"; then
    AC_CHECK_PROG(DOCBOOK2MAN, docbook-to-man docbook2man )
 fi
 
-AC_CHECK_PROG(GENCL,genparse,clparser)
+AC_ARG_ENABLE( genparse, [  --enable-genparse       enables recreation of the command line parsers], ENABLEGENPARSE=1 )
+if test "X$ENABLEGENPARSE" = "X1"; then
+   AC_CHECK_PROG(GENCLL,genparse,genparse)
+   if test "X$GENCLL" = "Xgenparse"; then
+      GENCL=clparser
+   fi
+   AC_SUBST([GENCL])
+fi
 
 dnl Checks for libraries.
 
@@ -52,7 +59,7 @@ AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,, AC_MSG_ERROR( ASC requires the SDL_ima
 
 dnl libbz2 stuff (should have a versionnr about 1.0.0)
 lib_bz2_static=no
-AC_ARG_ENABLE( libbz2-static, [  --enable-libbz2-static compiles a static \
+AC_ARG_ENABLE( libbz2-static, [  --enable-libbz2-static  compiles a static \
 libbz2 into the binary of asc.], [lib_bz2_static=$enableval], \
 [lib_bz2_usecache=yes] )
 AC_CHECK_LIB( bz2, BZ2_bzReadOpen, [ ], [checklib_bz2_static=yes] )
