--- a/source/ai/Makefile.in
+++ b/source/ai/Makefile.in
@@ -61,6 +61,7 @@ CC = @CC@
 CXX = @CXX@
 DOCBOOK2MAN = @DOCBOOK2MAN@
 GENCL = @GENCL@
+GENCLL = @GENCLL@
 LDADDLIBBZ2 = @LDADDLIBBZ2@
 LIBBZ2 = @LIBBZ2@
 MAINCONDATA = @MAINCONDATA@
