The data file is now installed in the correct directory  If the installation directory is changed with configure, the new path   will now be compiled directly into ASC

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,8 @@
 MAINTAINERCLEANFILES    = Makefile.in
 
-data_DATA               = main.con
+pkgdata_DATA               = main.con
+
+pkgdatadir = $(datadir)/games/@PACKAGE@
 
 main.con: @MAINCONDATA@
 	../source/tools/linux/asc_mount @MAINCONDATA@ main.con
