--- a/config.h.in
+++ b/config.h.in
@@ -12,6 +12,8 @@
 /* Define if you can safely include both <sys/time.h> and <time.h>.  */
 #undef TIME_WITH_SYS_TIME
 
+#undef GAME_DATADIR
+
 /* Define if you have the itoa function.  */
 #undef HAVE_ITOA
 
