--- a/configure.in
+++ b/configure.in
@@ -12,7 +12,7 @@ AC_PROG_CXX
 CXXFLAGS="$CXXFLAGS -DHEXAGON -funsigned-char -D_UNIX_ -D_SDL_ -D_NOASM_"
 AC_PROG_RANLIB
 
-AC_ARG_ENABLE( sgml2man, [  --enable-sgml2man       will build the man pages from the sgml source files.], SGML2MAN=manpages )
+AC_ARG_ENABLE( docbook2man, [  --enable-docbook2man    will build the man pages from the sgml source files.], SGML2MAN=manpages )
 AC_SUBST([SGML2MAN])
 if test "X$SGML2MAN" = "Xmanpages"; then
    AC_CHECK_PROG(DOCBOOK2MAN, docbook-to-man docbook2man )
@@ -46,6 +46,8 @@ AC_ARG_WITH( SDL-prefix,\
  \${sdlp}/include/],\
 CXXFLAGS="$CXXFLAGS -I$withval/include" ; CPPFLAGS="$CPPFLAGS -I$withval/include" ; LDFLAGS="$LDFLAGS -L$withval/lib" )
 
+MY_EXPAND_DIR(game_datadir, "$datadir/games/$PACKAGE")
+AC_DEFINE_UNQUOTED( GAME_DATADIR, "$game_datadir")
 
 AC_CHECK_HEADER( SDL/SDL.h, , AC_MSG_ERROR( ASC requires SDL headers to be present ) )
 
