Fixed: reaction fire could not be disabled when unit out of ammo  Fixed several AI problems

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -7,3 +7,5 @@ pkgdatadir = $(datadir)/games/@PACKAGE@
 main.con: @MAINCONDATA@
 	../source/tools/linux/asc_mount @MAINCONDATA@ main.con
 
+clean-local:
+	rm main.con
