Fixed linux makefiles  Added command line parsing to tank2pcx

--- a/source/clparser/Makefile.am
+++ b/source/clparser/Makefile.am
@@ -1,5 +1,5 @@
 BUILT_SOURCES = asc.cpp mapedit.cpp map2pcx.cpp mount.cpp demount.cpp viewid.cpp \
-                makegfx.cpp gfx2pcx.cpp
+                makegfx.cpp gfx2pcx.cpp tank2pcx.cpp
 
 %.cpp %.h: %.gp
 	genparse $< -l cpp -c cpp -o $*
