BI3 map translation tables now in textfile too

--- a/configure.in
+++ b/configure.in
@@ -138,7 +138,7 @@ MAINCONDATA="palette.pal data.version *.gfx helisun.jpg \
  	informat.nic ascent.nic descent.nic attack.nic \
  	movement.nic *.nic 640480.pcx *.raw *.scr *.fnt \
  	*.dat *.map helpsys?.txt message?.txt *.pcx lcac2.jpg \
- 	bkgr4.scr helpsys9.msg *.set *.wav"
+ 	bkgr4.scr helpsys9.msg *.set *.wav bi3maptranslation.txt"
 
 dnl what gehts packed into main.con (the data container file)
 AC_SUBST([MAINCONDATA])
