--- a/configure.in
+++ b/configure.in
@@ -59,6 +59,10 @@ dnl Checks for libraries.
 AC_CHECK_LIB( pthread, pthread_create, [ ] )
 AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,,  AC_MSG_ERROR( ASC requires the SDL_image library. You can get it at www.libsdl.org ) )
 AC_CHECK_LIB( SDL_mixer, Mix_PlayChannelTimed,, AC_MSG_ERROR( ASC requires the SDL_mixer library. You can get it at www.libsdl.org ) )
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
+dnl AC_CHECK_LIB( SDLmm, SDLmm::WasInit,, AC_MSG_ERROR( ASC requires the SDLmm library. You can get it at http://sourceforge.net/projects/sdlmm/ ) )
+AC_LANG_RESTORE
 
 dnl libbz2 stuff (should have a versionnr about 1.0.0)
 lib_bz2_static=no
@@ -96,6 +100,9 @@ SDL_VERSION=1.1.3
                   :,
                   AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
       )
+
+CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
+
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(select)
